@@ -71,3 +71,15 @@ indexpage:
 #          url: /gcp/gcp-regions.html
         - title: "Security overview - NetApp CVS in Google Cloud"
           url: /ncvs/ncvs-gc-overview.html
+#
+    - title: "Tools"
+      links:
+        - title: "FSx for ONTAP + VMC TCO Calculator"
+          url: https://cloud.netapp.com/vmc-aws-fsx-ontap/roi
+        - title: "FSx for ONTAP + VMC Simulator"
+          url: https://netapp-automation.github.io/FSx-VMC-Simulator
+        - title: "ANF + AVS TCO Estimator"
+          url: https://aka.ms/anfcalc
+        - title: "ANF + AVS Simulator"
+          url: https://netapp-automation.github.io/ANF-AVS-Simulator
+#
