@@ -28,6 +28,13 @@ indexpage:
         - title: "Workload Migrate Solutions"
           url:
 #
+    - title: "Tools"
+      links:
+        - title: "ANF + AVS TCO Estimator"
+          url: https://aka.ms/anfcalc
+        - title: "ANF + AVS Simulator"
+          url: https://netapp-automation.github.io/ANF-AVS-Simulator
+#
     - title: "Additional Information"
       links:
         - title: "Region Support for NFS Datastores"
